--- a/src/htmltests/ThemeTester.html
+++ b/src/htmltests/ThemeTester.html
@@ -49,10 +49,13 @@
 <script type="text/javascript" src="../displays/board/marks.js"></script>
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
+<!-- Displays commentbox -->
+<script type="text/javascript" src="../displays/commentbox/commentbox.js"></script>
+<script type="text/javascript" src="../displays/commentbox/create.js"></script>
+<script type="text/javascript" src="../displays/commentbox/sanitize.js"></script>
 <!-- Displays gui -->
 <script type="text/javascript" src="../displays/gui/gui.js"></script>
 <script type="text/javascript" src="../displays/gui/center.js"></script>
-<script type="text/javascript" src="../displays/gui/comment_box.js"></script>
 <script type="text/javascript" src="../displays/gui/split.js"></script>
 <!-- Displays icons -->
 <script type="text/javascript" src="../displays/icons/icons.js"></script>
@@ -122,28 +125,28 @@
       }
       #glift_display1 {
         position:relative;
-        width: 500;
-        height: 500;
+        width: 500px;
+        height: 500px;
       }
       #glift_display2 {
         position:relative;
-        width: 600;
-        height: 600;
+        width: 600px;
+        height: 600px;
       }
       #glift_display3 {
         position:relative;
-        width: 500;
-        height: 500;
+        width: 500px;
+        height: 500px;
       }
       #glift_display4 {
         position:relative;
-        width: 500;
-        height: 500;
+        width: 500px;
+        height: 500px;
       }
       #glift_display5 {
         position:relative;
-        width: 500;
-        height: 500;
+        width: 500px;
+        height: 500px;
       }
     </style>
   </head>
